<resources>
    <string name="app_name">ARM Controller</string>

    <string name="nav_header_title">ARM Controller</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_controller">Controller</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>

    <string name="preference_title_dh_mode">DH mode</string>
    <string name="preference_title_continuous_commands_delay">Continuous commands delay</string>
    <string name="preference_key_build_version">build_version</string>
    <string name="preference_title_build_version">Build version</string>
    <string name="preference_summary_build_version">0.6.2</string>

    <string name="image_description_down_arrow">Down arrow</string>
    <string name="image_description_right_arrow">Right arrow</string>
    <string name="image_description_up_arrow">Up arrow</string>
    <string name="image_description_left_arrow">Left arrow</string>

    <string name="text_release">RELEASE</string>
    <string name="text_grab">GRAB</string>
    <string name="text_speed">SPEED</string>

    <string name="text_bluetooth_disabled">Bluetooth is disabled.</string>
    <string name="text_connected">Connected</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_connection_failed">Connection failed</string>
    <string name="text_disconnected">Disconnected</string>
    <string name="text_initializing">Initializing…</string>
    <string name="text_no_device_selected">No device selected</string>
    <string name="text_no_devices_found">No Bluetooth devices found.</string>
    <string name="text_not_connected">Not connected</string>
    <string name="text_position_x">x</string>
    <string name="text_position_y">y</string>
    <string name="text_angle_phi">φ</string>
    <string name="text_default_int_value">0</string>

    <string name="title_connect_to_rpi">Connect to RPi</string>
    <string name="title_bluetooth_settings">Bluetooth settings</string>
    <string name="title_shutdown_raspberry_pi">Shutdown Raspberry Pi</string>

    <string name="header_paired_devices">Paired devices</string>
</resources>
