<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="controller"
        android:title="Controller"
        app:iconSpaceReserved="false">
        <SwitchPreference
                android:defaultValue="false"
                android:key="dh_mode"
                android:title="@string/preference_title_dh_mode"
                app:iconSpaceReserved="false" />
        <SeekBarPreference
            android:defaultValue="50"
            android:key="continuous_commands_delay"
            android:max="500"
            android:title="@string/preference_title_continuous_commands_delay"
            app:iconSpaceReserved="false"
            app:min="0"
            app:seekBarIncrement="10"
            app:updatesContinuously="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="About"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/preference_key_build_version"
            android:summary="@string/preference_summary_build_version"
            android:title="@string/preference_title_build_version"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>