<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/drawer_menu_top" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_controller"
            android:icon="@drawable/ic_menu_controller"
            android:title="@string/menu_controller" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/menu_devices" />
    </group>

    <group android:id="@+id/drawer_menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
