<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_controller">

    <fragment
        android:id="@+id/nav_controller"
        android:name="com.pawelcembaluk.armcontroller.ui.controller.ControllerFragment"
        android:label="@string/menu_controller"
        tools:layout="@layout/fragment_controller" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.pawelcembaluk.armcontroller.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pawelcembaluk.armcontroller.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
    </fragment>
</navigation>